Beginning of work!
1. Created a document structure
2. Defined the section "header"
3. Connect "bootstrap"
4. Created and started working on styles and pictures for the section "header"

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="icon" href="#">
+
+	<!-- Bootstrap grid CSS -->
+	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
+
+	<!-- Custom styles for this template -->
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<h1 style="color: green">Title</h1>
-	<h2>title 2</h2>
+	<header class="header">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p>НАШИ САЙТЫ ЗАСТАВЛЯЮТ РАБОТАТЬ ВАШ БИЗНЕС.</p>
+				</div>
+				<div class="col-12">
+					<p>Большинство веб-студий считают окончанием работы загрузку сайта в интернет. Но почти никто не умеет делать проекты, которые работают и приносят прибыль.</p>
+				</div>
+				<div class="col-12">
+					<div>
+						<img src="./img/header/header_518.png" alt="518">
+					</div>
+					<div>
+						<img src="./img/header/header_345.png" alt="345">
+					</div>
+					<div>
+						<img src="./img/header/header_218.png" alt="218">
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<nav>
+		
+	</nav>
+	<main>
+		
+	</main>
+	<footer>
+		
+	</footer>
 </body>
 </html>
