Worked with styles (style.sass)!
1. main-header
   - navigation
2. main-container
   - features

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,43 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>БОРОДИНСКИЙ</title>
+	<title>Borodinski</title>
+	<meta name="viewport" content="width=device-width, initial-slace=1, shrink-to-fit=no">
+	<meta name="description" content="#">
+	<meta name="autor" content="#">
 	<link rel="icon" href="#">
+
+	<!-- Bootstrap grid CSS -->
+	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
+
+	<!-- Google fonts - PT Sans -->
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+
+	<!-- Fonts -->
+	<!-- <link rel="stylesheet" href="./css/fonts_PTSans.css"> -->
 
 	<!-- Custom styles for this template -->
 	<link rel="stylesheet" href="./css/style.css">
+
+	<!-- Animations -->
+	<link rel="stylesheet" href="./css/animate.css">
+
+	<!-- Slik Sliders -->
+	<link rel="stylesheet" href="./slick/slick.css">
+	<link rel="stylesheet" href="./slick/slick-theme.css">
+
+	<!-- Text icons-->
+	<link rel="stylesheet" href="./css/fontello.css">
+
+
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-header__navigation">
-			<a href="#"><img src="./img/header/index-logo.png" alt="logo" class="main-header__navigation__logo"></a>
 			<ul class="main-header__navigation__list">
+				<li>
+					<a href="#">ГЛАВНАЯ</a>
+				</li>
 				<li>
 					<a href="info.html">ИНФОРМАЦИЯ</a>
 				</li>
@@ -30,17 +56,16 @@
 				</li>
 			</ul>
 			<ul class="main-header__navigation__login">
-				<li>
+				<li class="icon-login">
 					ВХОД
 				</li>
 			</ul>
 		</nav>
-		<section class="modal main-header__modal-login">
+		<!-- <section class="modal main-header__modal-login">
 			<h2 class="main-header__modal-login__title">ЛИЧНЫЙ КАБИНЕТ</h2>
 			<p>Введите пожалуйста свой логин и пароль</p>
-			<!-- Здесь будет форма -->
 			<span class="main-header__modal-login__close">x</span>
-		</section>
+		</section> -->
 	</header>
 
 
@@ -50,18 +75,22 @@
 
 
 		<section class="main-container__features">
+			<a href="#"><img src="./img/header/index-logo.png" alt="logo" class="main-container__features__logo"></a>
 			<h2 class="visually-hidden">Преимущества</h2>
 			<ul class="main-container__features__list">
 				<li class="main-container__features__list__item">
 					<h3>БЫСТРО</h3>
+					<p class="icon-fighter-jet"></p>
 					<p>МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДАТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
 				</li>
 				<li class="main-container__features__list__item">
 					<h3>КРУТО</h3>
+					<p class="icon-paw"></p>
 					<p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
 				</li>
 				<li class="main-container__features__list__item">
 					<h3>ДОРОГО</h3>
+					<p class="icon-money"></p>
 					<p>НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
 				</li>
 			</ul>
