.section-contacts_and_appointment

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
 
 
 
-		<div class="sections-news_and_gallery">
+		<div class="section-news_and_gallery">
 			<section class="main-container__news">
 				<h2 class="main-container__news__title">НОВОСТИ</h2>
 				<ul class="main-container__news__list">
@@ -130,36 +130,39 @@
 
 
 
-		<section class="main-container__contacts">
-			<h2 class="main-container__gallery__title">КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
-			<p>
-				БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-				АДРЕС: Г. КИЕВ, УЛ. Б. ХМЕЛЬНИЦКОГО, Д. 19/8<br>
-				ТЕЛЕФОН: +38 (099) 777-01-01
-			</p>
-			<p>
-				ВРЕМЯ РАБОТЫ:<br>
-				ПН—ПТ: С 10:00 ДО 22:00<br>
-				СБ—ВС: С 10:00 ДО 19:00
-			</p>
-			<a class="button" href="map.html">КАК ПРОЕХАТЬ</a>
-			<a class="button" href="contacts.html">ОБРАТНАЯ СВЯЗЬ</a>
-		</section>
-
-
-
-		<!-- <section class="main-container__modal-map">
-			<h2 class="visually-hidden">Как до нас добраться</h2>
-			<span class="main-container__modal-close">x</span>
-		</section> -->
-
-
-
-		<section class="main-container__appointment">
-			<h2 class="main-container__appointment__title">ЗАПИСАТЬСЯ</h2>
-			<p class="main-container__appointment__info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-			<!-- Здесь будет форма -->
-		</section>
+		<div class="section-contacts_and_appointment">
+			<section class="main-container__contacts">
+				<h2 class="main-container__contacts__title">КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+				<p>
+					БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+					АДРЕС: Г. КИЕВ, УЛ. Б. ХМЕЛЬНИЦКОГО, Д. 19/8<br>
+					ТЕЛЕФОН: +38 (099) 777-01-01
+				</p>
+				<p>
+					ВРЕМЯ РАБОТЫ:<br>
+					ПН—ПТ: С 10:00 ДО 22:00<br>
+					СБ—ВС: С 10:00 ДО 19:00
+				</p>
+				<a class="button" href="map.html">КАК ПРОЕХАТЬ</a>
+				<a class="button" href="contacts.html">ОБРАТНАЯ СВЯЗЬ</a>
+			</section>
+			
+			
+			
+			<!-- <section class="main-container__modal-map">
+				<h2 class="visually-hidden">Как до нас добраться</h2>
+				<span class="main-container__modal-close">x</span>
+			</section> -->
+			
+			
+			
+			<section class="main-container__appointment">
+				<h2 class="main-container__appointment__title">ЗАПИСАТЬСЯ</h2>
+				<p class="main-container__appointment__info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+				<form action=""></form>
+				<!-- Здесь будет форма -->
+			</section>
+		</div>
 	</main>
 
 
