finished index.html and started catalog.html

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -56,7 +56,7 @@
 				</li>
 			</ul>
 			<ul class="main-header__navigation__login">
-				<li class="icon-login">
+				<li class="icon-user-circle">
 					ВХОД
 				</li>
 			</ul>
@@ -67,5 +67,84 @@
 			<span class="main-header__modal-login__close">x</span>
 		</section> -->
 	</header>
+
+	<main class="catalog-main">
+
+		<section class="catalog-main__head">
+				<h2 class="catalog-main__head__title">СРЕДСТВА ДЛЯ УХОДА</h2>
+				<ul class="catalog-main__head__list">
+					<li><a href="index.html">ГЛАВНАЯ</a></li>
+					<li><a class="icon-login" href="catalog.html">МАГАЗИН</a></li>
+					<li><a class="icon-login" href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
+				</ul>
+		</section>
+
+
+
+		<section class="catalog-main__filter">
+			<form action="#">
+				<legend>ПРОИЗВОДИТЕЛИ:</legend>
+					<label for="manufacturers">
+					<input type="checkbox">Baxter of California
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Mr Natty
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Suavecito
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Malin+Goetz
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Murray’s
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">American Crew
+					</label>
+			</form>
+			<form action="#">
+				<legend>ГРУППЫ ТОВАРОВ:</legend>
+					<label for="manufacturers">
+					<input type="checkbox">Бритвенные<br>принадлежности
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Средства для ухода
+					</label>
+					<label for="manufacturers">
+					<input type="checkbox">Аксессуары
+					</label>
+			</form>
+			<input type="submit" value="ПОКАЗАТЬ"></input>
+		</section>
+
+
+
+
+	</main>
+
+
+	<footer class="index-footer">
+		<div class="main-footer">
+			<p class="main-footer__info">
+				БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+				АДРЕС: Г. КИЕВ, УЛ. Б. ХМЕЛЬНИЦКОГО, Д. 19/8<br>
+				<a href="map.html">КАК НАС НАЙТИ?</a><br>
+				ТЕЛЕФОН: +38 (099) 777-01-01
+			</p>
+			<div class="main-footer__social">
+				<span class="main-footer__social__title">ДАВАЙТЕ ДРУЖИТЬ!</span>
+				<ul class="main-footer__social__list">
+					<li><a href="#" class="main-footer__social__list__button icon-vkontakte"></a></li>
+					<li><a href="#" class="main-footer__social__list__button icon-facebook"></a></li>
+					<li><a href="#" class="main-footer__social__list__button icon-instagram"></a></li>
+				</ul>
+			</div>
+			<p class="main-footer__copyright">
+				<span>РАЗРАБОТАНО:</span><br>
+				<a href="#" class="button">Bodnar WEB</a>
+			</p>
+		</div>
+	</footer>
 </body>
 </html>
