--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 				</li>
 			</ul>
 			<ul class="main-header__navigation__login">
-				<li class="icon-login">
+				<li class="icon-user-circle">
 					<a href="#">ВХОД</a>
 				</li>
 			</ul>
@@ -184,25 +184,27 @@
 
 
 
-	<footer class="main-footer">
-		<p class="main-footer__info">
-			БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-			АДРЕС: Г. КИЕВ, УЛ. Б. ХМЕЛЬНИЦКОГО, Д. 19/8<br>
-			<a href="map.html">КАК НАС НАЙТИ?</a><br>
-			ТЕЛЕФОН: +38 (099) 777-01-01
-		</p>
-		<div class="main-footer__social">
-			<span class="main-footer__social__title">ДАВАЙТЕ ДРУЖИТЬ!</span>
-			<ul class="main-footer__social__list">
-				<li><a href="#" class="main-footer__social__list__button">Вконтакте</a></li>
-				<li><a href="#" class="main-footer__social__list__button">Фейсбук</a></li>
-				<li><a href="#" class="main-footer__social__list__button">Инстаграм</a></li>
-			</ul>
+	<footer class="index-footer">
+		<div class="main-footer">
+			<p class="main-footer__info">
+				БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+				АДРЕС: Г. КИЕВ, УЛ. Б. ХМЕЛЬНИЦКОГО, Д. 19/8<br>
+				<a href="map.html">КАК НАС НАЙТИ?</a><br>
+				ТЕЛЕФОН: +38 (099) 777-01-01
+			</p>
+			<div class="main-footer__social">
+				<span class="main-footer__social__title">ДАВАЙТЕ ДРУЖИТЬ!</span>
+				<ul class="main-footer__social__list">
+					<li><a href="#" class="main-footer__social__list__button icon-vkontakte"></a></li>
+					<li><a href="#" class="main-footer__social__list__button icon-facebook"></a></li>
+					<li><a href="#" class="main-footer__social__list__button icon-instagram"></a></li>
+				</ul>
+			</div>
+			<p class="main-footer__copyright">
+				<span>РАЗРАБОТАНО:</span><br>
+				<a href="#" class="button">Bodnar WEB</a>
+			</p>
 		</div>
-		<p class="main-footer__copyright">
-			<span>РАЗРАБОТАНО:</span>
-			<a href="#" class="button">Bodnar WEB</a>
-		</p>
 	</footer>
 
 
